--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ test-service/
 worker-service/src/main/resources
 worker-service/haproxy-docker/certs
 hr-service/src/main/resources/
+gateway-service/src/main/resources
 
 
 
