feat(lab3): vault for config-service

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ worker-service/src/main/resources
 worker-service/haproxy-docker/certs
 hr-service/src/main/resources/
 gateway-service/src/main/resources
+config-service/src/main/resources/
 
 
 
